# civitas-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TESTING.md  TODO.md  api-entrypoint.sh  cloudbuild-prod.yaml  cloudbuild-staging.yaml  pyproject.toml  schema.dbml  test_pdf_staging.json  test_prod_pdf.py  test_staging_pdf.py
app/: __init__.py  db.py  decorators.py  dependencies.py  enums.py  main.py  models.py  oidc.py  pydantic_models.py  rate_limiter.py  rate_limiter_cpf.py  rbac.py  redis_cache.py  utils.py  utils.sql
app/config/: __init__.py  base.py  dev.py  prod.py  test.py
app/cron/: email_sync.py
app/routers/: agents.py  auth.py  cameras_cor.py  cars.py  cloning_async.py  companies.py  cortex.py  demandants.py  email_templates.py  emails.py  gcs.py  islands.py  layers.py  notification_channels.py  operations.py  organizations.py  pdf.py  people.py  radars.py  rbac.py  reports.py  search.py  standardized_response_router.py  teams.py  tickets.py  tickets_natures.py  tickets_types.py  users.py  users_roles.py  waze.py
app/services/: README.md  __init__.py  bigquery_service.py  company_service.py  cortex_service.py  monitored_plate_service.py  monitored_plate_validity.py  people_service.py  (+1 more)
dev/: docker-compose.yml
docs/: api-organizations-demandantes.md  api-placas-monitoradas.md
scripts/: README_WATCH_TEMPLATE.md  plates_management.py  run_validity_jobs.py  update_embeddings.py  watch_template.py
tests/: README.md  conftest.py  load_test.py  quick_test.py  test_api.py  test_monitored_plate_validity.py
(+207 files in other folders)
